--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,28 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-.router-link-exact-active { @apply text-primary; }
+html { font-size: 62.5%; }
 
-.multiselect { @apply min-h-0 !important; }
-.multiselect_select { height: 28px !important; }
-.multiselect__tags { @apply rounded-none !important; min-height: 30px !important; padding-top: 4px !important; }
-.multiselect__tag { @apply text-xs !important; }
-.multiselect__tag { @apply bg-gray-200 text-gray-800 !important; }
-.multiselect__tag-icon { @apply bg-gray-200 !important; }
-.multiselect__tag-icon::after { @apply text-gray-800 !important; }
-.multiselect__tag-icon:hover { @apply bg-gray-500 text-white !important; }
+/* .router-link-exact-active { @apply text-primary; } */
+
+.multiselect { @apply min-h-0 !important; height: 40px !important; }
+.multiselect_select { height: 40px !important; }
+.multiselect__tags { @apply rounded-none !important; min-height: 40px !important; padding-top: 4px !important; }
+.multiselect__tag { @apply text-14 !important; }
+.multiselect__tag { @apply bg-btn text-white !important; }
+.multiselect__tag-icon { @apply bg-btn !important; }
+.multiselect__tag-icon::after { @apply text-white !important; }
+.multiselect__tag-icon:hover { @apply bg-btn-h text-white !important; }
 .multiselect__tag-icon::after:hover { @apply text-white !important; }
-.multiselect__single { @apply text-xs !important;  }
-.multiselect__input { @apply text-xs !important; padding-top: 2px !important; padding-left: 2px !important; }
-.multiselect__placeholder { @apply text-xs !important; padding-top: 2px !important; padding-left: 2px !important; }
-.multiselect__option { @apply text-xs py-2 px-4 min-h-0 !important; }
-.multiselect__option--highlight { @apply bg-gray-200 text-gray-800 !important; }
-.multiselect__option--highlight::after { @apply bg-gray-200 text-gray-800 !important; line-height: 32px !important; }
+.multiselect__single { @apply text-14 !important;  }
+.multiselect__input { @apply text-14 !important; padding-top: 2px !important; padding-left: 2px !important; }
+.multiselect__placeholder { @apply text-14 !important; padding-top: 2px !important; padding-left: 2px !important; }
+.multiselect__option { @apply text-14 py-6 px-10 min-h-0 !important; }
+.multiselect__option--highlight { @apply bg-head text-white !important; }
+.multiselect__option--highlight::after { @apply bg-head text-white !important; line-height: 32px !important; }
 
-.c-pane-container { @apply font-noto !important; }
 .c-arrow { width: 20px !important; height: 20px !important; }
-.c-title { @apply text-sm !important; }
-.c-weekdays { @apply text-xs !important; }
-.c-day-content { @apply text-xs !important; height: 25px !important; width: 25px !important;}
+.c-title { @apply text-14 !important; }
+.c-weekdays { @apply text-12 !important; }
+.c-day-content { @apply text-12 !important; height: 25px !important; width: 25px !important;}
 .c-pane { @apply min-w-0 !important; width: 200px; }
-.c-table-cell { @apply text-xs !important;}
+.c-table-cell { @apply text-12 !important;}
